I gotta do plane stuff later bro

--- a/index.html
+++ b/index.html
@@ -39,8 +39,12 @@
         <div class="pages"><a href="about.html">About</a></div>
       </nav>
       <h1 id="heading">Blurbify Plane</h1>
-      <div class="gradientcontainer">
+      <!-- <div class="gradientcontainer">
         <div id="editedimage"></div>
+      </div> -->
+
+      <div class="masked">
+        <img src="images/defaultflying.png" alt="Background" />
       </div>
       <div class="buttonsdiv">
         <button id="gradient1button">Gradient 1 Animation</button>
