Serious plane design progress

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <title>Gradientize</title>
+    <title>Blurbify Plane</title>
     <meta
       name="description"
       content="Gradients are cool. And you can animate them."
@@ -35,23 +35,32 @@
   <body>
     <div class="sitecontainer">
       <nav class="navbar">
-        <div class="logo">Blurbify Plane</div>
+        <div class="logo">Blurbify Plane Site</div>
         <div class="pages"><a href="about.html">About</a></div>
       </nav>
-      <h1 id="heading">Blurbify Plane</h1>
-      <!-- <div class="gradientcontainer">
-        <div id="editedimage"></div>
-      </div> -->
 
-      <div class="masked">
-        <img src="images/defaultflying.png" alt="Background" />
+      <div id="editedimage2">
+        <img src="images/defaultflying.png" alt="Plane" class="plane" />
+
+        <div class="gradient-circle"></div>
+        <div class="bluecircle"></div>
+        <div class="orange-circle"></div>
+        <div class="circle3"></div>
+        <h1 id="heading">Blurbify</h1>
+        <h2 id="at">@blurbifyapp</h2>
       </div>
+
+      <!--  -->
       <div class="buttonsdiv">
-        <button id="gradient1button">Gradient 1 Animation</button>
-        <button id="gradient2button">Gradient 2 Animation</button>
+        <button id="shifthuebutton">Hue Shift Animation</button>
+        <button id="contrastbutton">Contrast Animation</button>
         <button id="gradient3button">Gradient 3 Animation</button>
       </div>
-
+      <h1 id="heading">Blurbify Plane Gradient Animation (looping):</h1>
+      <div class="gradientcontainer">
+        <div id="editedimage"><div class="paint-layer"></div></div>
+        <!-- <img src="images/defaultflying.png" alt="" srcset="" /> -->
+      </div>
       <footer class="gradientfooter">
         <p>SW Projects 2025</p>
       </footer>
