--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="About Gradient Project 2025" />
-    <title>Blurbify Plane fr</title>
+    <title>About Blurbify Plane</title>
     <link rel="stylesheet" href="static/css/main.css" />
     <link
       rel="stylesheet"
@@ -29,18 +29,23 @@
   <body>
     <div class="sitecontainer">
       <nav class="navbar">
-        <div class="logo">Gradientize</div>
+        <div class="logo">Blurbify Plane Site</div>
         <div class="pages"><a href="index.html">Home</a></div>
       </nav>
-      <h1>About Gradientiz</h1>
+      <h1>About Blurbify Plane</h1>
       <div class="aboutdiv">
         <p>
-          You can take any image, mask out the visible part of it, then create a
-          background in the same shape of that image
-          <br />From there you can do a variety of animations on it. Gradients
-          are one example, but you could also make the background a ton of
-          images as well. Or a pattern. <br /><br />Created Oct 2025, by Shalev
-          Widen with HTML, SCSS, and JS.
+          I designed this Blurbify plane to be the default flying image on my
+          site, blurbify.
+          <br />In order to have those circles and stuff on the plane I used
+          mask css techniques and then used positioning and adjusted the top and
+          right values for the circles and the text to get them into the right
+          place. I also applied a lot of filters to the plane, for example
+          huerotate() brightness() contrast() and saturate().<br /><br />
+          See the plane in motion at
+          <a href="https://www.blurbifyapp.com/">blurbifyapp.com</a>
+          <br /><br />
+          Created Nov 2025, by Shalev Widen with HTML, SCSS, and JS.
         </p>
         <div class="links">
           <a href="https://www.instagram.com/swiden.mp4" target="_blank">
