Added Greyscale Animation

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="buttonsdiv">
         <button id="shifthuebutton">Hue Shift Animation</button>
         <button id="contrastbutton">Contrast Animation</button>
-        <button id="gradient3button">Gradient 3 Animation</button>
+        <button id="greyscalebutton">Greyscale Animation</button>
       </div>
       <h1 id="heading">Blurbify Plane Gradient Animation (looping):</h1>
       <div class="gradientcontainer">
