updated blurbify logo

--- a/index.html
+++ b/index.html
@@ -51,10 +51,12 @@
       </div>
 
       <!--  -->
+
       <div class="buttonsdiv">
         <button id="shifthuebutton">Hue Shift Animation</button>
         <button id="contrastbutton">Contrast Animation</button>
         <button id="greyscalebutton">Greyscale Animation</button>
+        <button id="save">Save Plane</button>
       </div>
       <h1 id="heading">Blurbify Plane Gradient Animation (looping):</h1>
       <div class="gradientcontainer">
