Added bottom stuff

--- a/index.html
+++ b/index.html
@@ -58,13 +58,18 @@
         <button id="greyscalebutton">Greyscale Animation</button>
         <button id="saveplane">Save Plane as png</button>
       </div>
-      <h1 id="heading">Blurbify Plane Gradient Animation (looping):</h1>
+      <h1 id="textheading">Blurbify Plane Gradient Animation (looping):</h1>
       <div class="gradientcontainer">
         <div id="editedimage">
           <!-- this has the plane it it -->
           <div class="paint-layer"></div>
         </div>
         <!-- <img src="images/defaultflying.png" alt="" srcset="" /> -->
+      </div>
+      <div class="headingandplane">
+        <h1 class="heading2">Blurbify</h1>
+
+        <img src="images/blurbifyplane.png" alt="" id="plane2" />
       </div>
       <footer class="gradientfooter">
         <p>SW Projects 2025</p>
